added first badges in footer section and improve moment when animation reading text about me starts

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <script src="https://npmcdn.com/github-profile-widget@<version-you-want>/github-profile-widget.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
